# organization-autorunner

./: .cursorrules  .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLOUD_AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
adapters/agent-bridge/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
adapters/agent-bridge/examples/: hermes.toml  router.toml  zeroclaw.toml
adapters/agent-bridge/oar_agent_bridge/: auth.py  bridge.py  cli.py  config.py  mentions.py  models.py  oar_client.py  prompts.py  registry.py  router.py  state_store.py  util.py
adapters/agent-bridge/oar_agent_bridge/adapters/: __init__.py  acp_client.py  base.py  hermes_acp.py  zeroclaw_gateway.py
adapters/agent-bridge/tests/: test_acp_client.py  test_bridge.py  test_cli.py  test_config.py  test_mentions.py  test_oar_client.py  test_request_keys.py  test_router.py  test_util.py  test_wake_packet.py
cli/: .gitignore  AGENTS.md  README.md  go.mod
contracts/: README.md  oar-control-openapi.yaml  oar-openapi.yaml  oar-schema.yaml
core/: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  go.mod  go.sum
deploy/: linux-packed-host.md  managed-hosting.md  multi-instance.md
docs/: http-api.md  oar-core-spec.md  oar-ui-spec.md  review-pr170-findings.md  runbook.md  spec-compliance.md
runbooks/: blob-backend-operations.md  packed-host-backup-restore.md  packed-host-configuration.md  packed-host-launch-checklist.md  packed-host-launch-notes.md  release.md
scripts/: capture-screenshots.js  (+20 more)
(+709 files in other folders)
